[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autourgos-semantic-memory"
version = "1.0.1"
description = "TF-IDF keyword retrieval memory for Autourgos agents — KeywordRetriever, KeywordMemory."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jitin Kumar Sengar", email = "devxjitin@gmail.com"}
]
keywords = ["autourgos", "agent", "memory", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["autourgos-memory>=1.0.1", "autourgos-buffer-memory>=1.0.1"]


[project.urls]
Homepage = "https://github.com/devxjitin/autourgos-semantic-memory"
Repository = "https://github.com/devxjitin/autourgos-semantic-memory"
Issues = "https://github.com/devxjitin/autourgos-semantic-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autourgos_semantic_memory*"]

[tool.setuptools.package-data]
autourgos_semantic_memory = ["py.typed"]
